<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:gravity="center" />

        <EditText
            android:id="@+id/input_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal"
            android:gravity="center" />

        <EditText
            android:id="@+id/input_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal"
            android:gravity="center" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />
        </RadioGroup>

        <Spinner
            android:id="@+id/activity_level_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/activity_levels" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>